# inj-rebate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  get_delegators.sh  justfile  run_comp.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs
