[package]
name = "validator-rebate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
env_logger = "0.11"
log="0.4"
dotenv="0.15.0"
rust_decimal = "1.36.0"